fixing spacing

--- a/style.css
+++ b/style.css
@@ -254,8 +254,8 @@ h1, h2, h3 {
     font-size: 2.5em;
     padding: 1em 0% 1em 6.2%;
 }
-.feature .dash,
-.feature .cloud {
+.feature th.dash,
+.feature th.cloud {
     width: 30%;
     padding-bottom: 50px;
 }
